/*
 Localizable.strings
 OpenFoodFacts
 
 Created by Andrés Pizá Bückmann on 27/04/2017.
 Copyright © 2017 Andrés Pizá Bückmann. All rights reserved.
 */

// Product Search

"product-search.search-placeholder" = "Search for a product by name or barcode";
"product-search.no-results" = "No Results";
"product-search.error-view.title" = "Something went wrong";
"product-search.error-view.subtitle" = "Please try again";
"product-search.initial-view.text" = "Open Food Facts is an open database of food products with ingredients, allergens, nutrition facts and all the tidbits of information we can find on product labels.";

// Product Scanner
"product-scanner.overlay.user-help" = "Scan the barcode of the product";
"product-scanner.overlay.extended-user-help" = "Can't find a barcode.\nCenter the barcode in the screen.\nMake sure the barcode is well lit.";
/* Banner message shown to the user when the server returned an error while trying to fetch a product given its barcode */
"product-scanner.barcode.error" = "Error scanning barcode. Please try again in a few moments.";

"product-scanner.permissions.noPermissions.title" = "OpenFoodFacts needs camera permissions";
"product-scanner.permissions.noPermissions.message" = "Please grant permission to use the camera to be able to scan barcodes";
"product-scanner.permissions.noPermissions.action.title" = "Open Settings";

"product-scanner.permissions.failed.title" = "Could not setup barcode scanning";
"product-scanner.permissions.failed.message" = "Check in Privacy Settings if OpenFoodFacts has permission to use the camera";
"product-scanner.permissions.failed.action.title" = "Leave barcode scanning";

"product-scanner.search.status" = "Loading product...";

// Product Add
/* Displayed when an image taken by the user is being uploaded to the server during the product creation process */
"product-add.uploading-image-banner.title" = "Uploading image...";
/* Displayed when an image taken by the user during the product creation process fails to upload */
"product-add.image-upload-error-banner.title" = "Something went wrong";
/* Displayed when an image taken by the user during the product creation process fails to upload */
"product-add.image-upload-error-banner.subtitle" = "Please try to take the picture again";
/* Displayed when an image taken by the user during the product creation process uploads successfully */
"product-add.image-upload-success-banner.title" = "Image was uploaded successfully";
/* Displayed when a product was successfully added to the products database */
"product-add.product-add-success-banner.title" = "Product added successfully. Thank you!";
"product-add.uploaded-image" = "Image uploaded, thanks!";
"product-add.save-error.title" = "Error while saving product";
"product-add.save-error.message" = "Try again later";
"alert.action.ok" = "Ok";

// Product Detail
"product-detail.header.add-new-picture" = "Add a new picture";
/* Keep this text as short as possible */
"product-detail.edit-alert.title" = "Remember to save your changes";
/* Keep this text as short as possible */
"product-detail.edit-alert.subtitle" = "Scroll down to the 'Save' button";

// Product detail page titles
"product-detail.page-title.summary" = "Summary";
"product-detail.page-title.ingredients" = "Ingredients";
"product-detail.page-title.nutrition" = "Nutrition";
"product-detail.page-title.nutrition-table" = "Nutrition table";

// Product detail summary info rows labels
"product-detail.summary.barcode" = "Barcode";
"product-detail.summary.quantity" = "Quantity";
"product-detail.summary.packaging" = "Packaging";
"product-detail.summary.brands" = "Brands";
"product-detail.summary.manufacturing-places" = "Manufacturing or processing places";
"product-detail.summary.origins" = "Origin of ingredients";
"product-detail.summary.categories" = "Categories";
"product-detail.summary.labels" = "Labels, certifications, awards";
"product-detail.summary.citiesTags" = "City, state and country where purchased";
"product-detail.summary.stores" = "Stores";
"product-detail.summary.countries" = "Countries where sold";

// Product detail ingredients info row labels
"product-detail.ingredients.ingredients-list" = "List of ingredients";
"product-detail.ingredients.allergens-list" = "Substances or products causing allergies or intolerances";
"product-detail.ingredients.traces-list" = "Traces";
"product-detail.ingredients.additives-list" = "Additives";
"product-detail.ingredients.palm-oil-ingredients" = "Ingredients from palm oil";
"product-detail.ingredients.possible-palm-oil-ingredients" = "Ingredients that may be from palm oil";

// Product detail nutrition info row labels
"product-detail.nutrition.serving-size" = "Serving size";
"product-detail.nutrition.carbon-footprint" = "Carbon footprint / CO2 emissions";

// Product detail nutrition table labels
"product-detail.nutrition-table.nutritional-table-header" = "Nutrition facts";
"product-detail.nutrition-table.for-100g" = "For 100 g";
"product-detail.nutrition-table.for-serving" = "Per serving";

// Nutrition levels
"nutrition-level.low" = "in low quantity";
"nutrition-level.moderate" = "in moderate quantity";
"nutrition-level.high" = "in high quantity";

// Nutrition
"nutrition.energy" = "Energy";
"nutrition.fats" = "Fats";
"nutrition.fats.saturated-fat" = "Saturated fat";
"nutrition.fats.mono-unsaturated-fat" = "Mono unsaturated fat";
"nutrition.fats.poly-unsaturated-fat" = "Poly unsaturated fat";
"nutrition.fats.omega3" = "Omega 3";
"nutrition.fats.omega6" = "Omega 6";
"nutrition.fats.omega9" = "Omega 9";
"nutrition.fats.trans-fat" = "Trans fat";
"nutrition.fats.cholesterol" = "Cholesterol";
"nutrition.carbohydrate" = "Carbohydrate";
"nutrition.carbohydrate.sugars" = "Sugars";
"nutrition.carbohydrate.sucrose" = "Sucrose";
"nutrition.carbohydrate.glucose" = "Glucose";
"nutrition.carbohydrate.fructose" = "Fructose";
"nutrition.carbohydrate.lactose" = "Lactose";
"nutrition.carbohydrate.maltose" = "Maltose";
"nutrition.carbohydrate.maltodextrins" = "Maltodextrins";
"nutrition.fiber" = "Dietary fiber";
"nutrition.proteins" = "Proteins";
"nutrition.proteins.casein" = "Casein";
"nutrition.proteins.serum-proteins" = "Serum Proteins";
"nutrition.proteins.nucleotides" = "Nucleotides";
"nutrition.salt" = "Salt";
"nutrition.sodium" = "Sodium";
"nutrition.alcohol" = "Alcohol";
"nutrition.vitamins" = "Vitamins";
"nutrition.vitamins.a" = "Vitamin A";
"nutrition.vitamins.beta-carotene" = "Beta carotene";
"nutrition.vitamins.d" = "Vitamin D";
"nutrition.vitamins.e" = "Vitamin E";
"nutrition.vitamins.k" = "Vitamin K";
"nutrition.vitamins.c" = "Vitamin C";
"nutrition.vitamins.b1" = "Vitamin B1";
"nutrition.vitamins.b2" = "Vitamin B2";
"nutrition.vitamins.pp" = "Vitamin PP";
"nutrition.vitamins.b6" = "Vitamin B6";
"nutrition.vitamins.b9" = "Vitamin B9";
"nutrition.vitamins.b12" = "Vitamin B12";
"nutrition.vitamins.biotin" = "Biotin";
"nutrition.vitamins.pantothenic-acid" = "Pantothenic acid";
"nutrition.minerals" = "Minerals";
"nutrition.minerals.silica" = "Silica";
"nutrition.minerals.bicarbonate" = "Bicarbonate";
"nutrition.minerals.potassium" = "Potassium";
"nutrition.minerals.chloride" = "Chloride";
"nutrition.minerals.calcium" = "Calcium";
"nutrition.minerals.phosphorus" = "Phosphorus";
"nutrition.minerals.iron" = "Iron";
"nutrition.minerals.magnesium" = "Magnesium";
"nutrition.minerals.zinc" = "Zinc";
"nutrition.minerals.copper" = "Copper";
"nutrition.minerals.manganese" = "Manganese";
"nutrition.minerals.fluoride" = "Fluoride";
"nutrition.minerals.selenium" = "Selenium";
"nutrition.minerals.chromium" = "Chromium";
"nutrition.minerals.molybdenum" = "Molybdenum";
"nutrition.minerals.iodine" = "Iodine";
"nutrition.minerals.caffeine" = "Caffeine";
"nutrition.minerals.taurine" = "Taurine";
"nutrition.minerals.ph" = "pH";
"nutrition.minerals.fruits-vegetables-nuts" = "Fruits, vegetables, nuts";
"nutrition.minerals.collagen-meat-protein-ratio" = "Collagen meat protein ratio";
"nutrition.minerals.cocoa" = "Cocoa";
"nutrition.minerals.chlorophyl" = "Chlorophyl";

// Call to action
"call-to-action.summary" = "Take a picture of the front";
"call-to-action.ingredients" = "Take a picture of the ingredients";
"call-to-action.nutrition" = "Take a picture of the nutrition table";

// Product images
/* To be used with another string, like 'Take a picture of the product's ingredients` */
"product.images.take-picture" = "Take a picture of the product's";
"product.images.product" = "Product's";
"product.images.picture" = "picture ✅";
"product.images.front" = "front";
"product.images.ingredients" = "ingredients";
"product.images.nutrition" = "nutrition table";

// Settings storyboard
"settings.tab-bar.item" = "Settings";
"settings.sections.information" = "Information";
"settings.credits.title" = "Credits";
"settings.scan-on-launch.title" = "Show Scan On App Launch";
"settings.information.discover" = "Discover";
"settings.information.how-to-contribute" = "How To Contribute";
"settings.credits.text" = "\"Barcode scan\" button icon, \"Settings\" icon and \"Flash\" icon made by Madebyoliver (http://www.flaticon.com/authors/madebyoliver) is licensed by CC 3.0 BY (http://creativecommons.org/licenses/by/3.0/)
\"Take picture\" icon made by Picol (http://www.flaticon.com/authors/picol) is licensed by CC 3.0 BY (http://creativecommons.org/licenses/by/3.0/)
\"Profile\" icon made by Smashicons (https://www.flaticon.com/authors/smashicons) is licensed by CC 3.0 BY (http://creativecommons.org/licenses/by/3.0/)";

// User view
/* Tab bar item */
"user.tab-bar.item" = "User";
"user.log-in" = "Log In";
"user.log-out" = "Log Out";
"user.username" = "Username";
"user.password" = "Password";
"user.check-your-contributions.button" = "Check Your Contributions";
"user.create-account.text" = "If you don't have an account, click the link bellow to create one.";
"user.create-account.button" = "Create An Account";
"user.why-log-in.text" = "Login in with your account will associate all your contributions to your account.";
"user.alert.wrong-credentials.title" = "Unable to log in";
"user.alert.wrong-credentials.subtitle" = "Check your username and password are correct";
"user.alert.generic-error.title" = "There was an error logging in";
"user.alert.generic-error.subtitle" = "Please try again in a few moments";
"user.alert.username-missing" = "Username is required";
"user.alert.password-missing" = "Password is required";
